--- a/app/_app-variables.scss
+++ b/app/_app-variables.scss
@@ -63,7 +63,7 @@ $side-drawer-header-brand: #737373;
 $side-drawer-background: #FFFFFF;
 
 // ActionBar
-$ab-background: $accent;
+$ab-background: $error-dark;
 $ab-color: $white;
 
 // Buttons
